--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
 html {
    border-right: 256px solid #aad4cf;
    border-left: 256px solid #aad4cf;
+   height: 1250px;
 }
       
 body {
@@ -17,7 +18,6 @@ body {
     color:white;
     text-align:center;
     padding-top: 155px;
-    
 }
 
 #firstphoto {
@@ -82,13 +82,11 @@ h3 {
     top: 740px;
     font-size:1.8em;
     font-family:'Arial Narrow', Arial, sans-serif;
-
 }
 
 .facts {
     position:absolute;
     top: 800px;
-
 }
 
 h4 {
@@ -117,5 +115,4 @@ h4 {
     display: inline-block;
     margin:8px 4px;
     font-size:0.5em;
-
 }
