--- a/main.css
+++ b/main.css
@@ -1,14 +1,17 @@
+/* staring with a border to make sure everything line up correctly */
 html {
     border-right: 256px solid #aad4cf;
     border-left: 256px solid #aad4cf;
     height: 1350px;
  }
 
+ /* trying to give the html a container class to fix sizing */
  .container {
     margin: 0 auto;
     width: 1007.2px !important;
  }
        
+ /* keeping the img as the background was much eaiser */
  body {
      background-color: #D4E9E7;
      background-image: url("images/lone-starfish-wide.jpg");
@@ -24,6 +27,7 @@ html {
      padding-top: 155px;
  }
  
+ /* giving it padding so the text flows beside it */
  #firstphoto {
      position:relative;
      top: 50px;
@@ -57,6 +61,7 @@ html {
      color:black;
  }
  
+ /* giving correcting spacing by using the flex element */
  .menu {
     padding-top: 60px;
     display:flex;
@@ -67,6 +72,7 @@ html {
     padding-left: 90px;
     font-family:'Arial Narrow', Arial, sans-serif; 
     list-style: none;
+
  }
  
  .home {
@@ -108,6 +114,7 @@ html {
      padding: 10px 10px 10px 5px;
  }
  
+ /* using inlineblock to use a different width and height */
  .radioButton {
      display:inline-block;
  }
